cookieClicker.css
/* Header */

.navbar{
    display: flex;
    flex-direction: row;
    background-color: gray;
    width: 80rem;
    height: 4rem;
    margin: auto;
    padding: 0;
}

.navContainer{
    display: flex;
    flex-direction: row;
    width: 50rem;
    height: auto;
}

.navBtn{
    text-align: center;
    width: 10rem;
    height: auto;
    transition-duration: 100ms;
    background-color: rgb(33, 158, 33);
    color: white;
    border-radius: 10px;
    line-height: 4rem;
    cursor: pointer;
}

.navBtn:hover{
    transition-duration: 100ms;
    background-color:rgb(44, 100, 204);
}

.saveBtn{
    text-align: center;
    width: 10rem;
    height: auto;
    transition-duration: 100ms;
    background-color: rgb(33, 154, 158);
    color: white;
    border-radius: 10px;
    line-height: 4rem;
    cursor: pointer;
}

.saveBtn:hover{
    transition-duration: 100ms;
    background-color: rgb(192, 166, 50);
}

.navTitle{
    text-align: center;
    width: 20rem;
    height: auto;

}

/* Footer */

.footer{
    text-align: center;
    margin: auto;
}

.footerText{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 2rem;
}

/* Main page */

.mainContainer{
    display: flex;
    flex-direction: column;
    width: 100rem;
    height: 40rem;
    margin: auto;
    margin-top: 1rem;
}

.interactiveContainer{
    display: flex;
    flex-direction: row;
    height: 30rem;
}

.cookieContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.15);
    width: 70rem;
}

.unitContainer{
    background-color: rgba(255, 255, 255, 0.3);
    overflow-y: scroll;
    width: 30rem;
}

/* Main page: cookie popups */
.cookiePopupContainer{
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: rgba(23, 196, 202, 0.15);
    width: 100rem;
    height: 6rem;
}

.cookiePopup{
    display: flex;
    opacity: 0;
    background-color: rgba(23, 196, 202, 0.5);
    width: 3rem;
    height: 3rem;
    border-radius: 15px;
    margin-top: 3rem;
}

@keyframes addedCookies {
    0% {opacity: 0;}
    50% {transform: translateY(-3rem);
        opacity: 1;}
    100% {opacity: 0;}
}

@keyframes noAddedCookies {
    0% {opacity: 0;
        transform: translateY(0rem);}
    100% {opacity: 0;}
}

/* Main page: cookie */

.cookie{
    width: 5rem;
    height: 5rem;
    margin: auto;
    margin-bottom: 1rem;
    transition-duration: 100ms;
    transform: scale(1, 1);
}

.cookie:hover{
    transition-duration: 100ms;
    transform: scale(2, 2);
}

.cookie:active{
    transition-duration: 50ms;
    transform: skewX(25deg);
}

.cookieNumber{
    font-size: 3rem;
    margin: auto;
    margin-top: 1rem;
}

/* Main page: units */

.singleUnitCard{
    display: none;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-gap: 3px;
    width: auto;
    height: 10rem;
    margin-bottom: 1rem;
    background-color: rgb(33, 158, 33);
}

.unitPortrait{
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 5;
    border: 4px solid rgb(24, 117, 24);
    border-radius: 10px;
}

.unitName{
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 5;
    grid-row-end: 7;
    color: white;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
    border: 4px solid rgb(24, 117, 24);
    border-radius: 10px;

}

.unitCookies{
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    grid-column-start: 3;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 3;
    color: white;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
    border: 4px solid rgb(24, 117, 24);
    border-radius: 10px;
}

.unitAmount{
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    grid-column-start: 3;
    grid-column-end: 5;
    grid-row-start: 3;
    grid-row-end: 5;
    color: white;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
    border: 4px solid rgb(24, 117, 24);
    border-radius: 10px;
}

.unitBtnContainer{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    grid-column-start: 5;
    grid-column-end: 7;
    grid-row-start: 1;
    grid-row-end: 5;
    color: white;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
}

.unitBtn{
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    border: 4px solid rgb(24, 117, 24);
    border-radius: 10px;
    width: 4.2rem;
    height: 2.8rem;
    cursor: pointer;
    color: white;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
    transition-duration: 50ms;
    transform: scale(1, 1);
}

.unitBtn:hover{
    transition-duration: 50ms;
    transform: scale(1.2, 1.2);
}

.unitCost{
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    grid-column-start: 3;
    grid-column-end: 7;
    grid-row-start: 5;
    grid-row-end: 7;
    color: white;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
    border: 4px solid rgb(24, 117, 24);
    border-radius: 10px;
}

/* Main page: save bar (shows up when clicking the save button on the header) */

.saveContainer{
    display:none;
    flex-direction: column;
    position: absolute;
    align-items: center;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border: 0.2rem solid rgba(52, 110, 197, 0.8);
    border-radius: 15px;
    background-color: rgba(52, 151, 197, 0.15);
    width: 35rem;
    height:40rem;
}

.saveGameForm{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 90%;
}

.saveTitle{
    font-size: 3rem;
    text-align: center;
    color: white;
}

.saveLabel{
    font-size: 1.5rem;
    margin-bottom: 1rem;
    color: white;
}

.saveInputField{
    width:15rem;
    height: 3rem;
    font-size: 3rem;
    color: white;
    transition-duration: 50ms;
    background-color: rgba(0, 0, 0, 0);
    border: 0.2rem solid rgba(52, 110, 197, 0.8);
    border-radius: 15px;
}

.saveInputField:hover{
    transition-duration: 50ms;
    background-color: rgba(75, 132, 218, 0.5);
    box-shadow: 0 0 10px rgba(75, 132, 218, 0.8), 0 0 30px rgba(75, 132, 218, 0.8);
}

.submitBtn{
    border: none;
    font-size: 2.5rem;
    color: white;
    width:10rem;
    height: 5rem;
    border-radius: 15px;
    background-color: rgba(75, 132, 218, 0.8);
    cursor: pointer;
    transition-duration: 150ms;
    transform:scale(1, 1);
    margin-bottom: 1rem;
}

.submitBtn:hover{
    transition-duration: 150ms;
    transform:scale(1.5, 1.5);
    background-color: rgba(75, 218, 118, 0.8);
    box-shadow: 0 0 10px rgba(75, 218, 118, 0.8), 0 0 30px rgba(75, 218, 118, 0.8);
}

.exitBtn{
    border: none;
    font-size: 1.5rem;
    color: white;
    width:10rem;
    height: 3rem;
    border-radius: 15px;
    background-color: rgba(218, 92, 75, 0.8);
    cursor: pointer;
    transition-duration: 150ms;
    transform:scale(1, 1);
    margin-bottom: 1rem;
}

.exitBtn:hover{
    transition-duration: 150ms;
    transform:scale(1.2, 1.2);
    background-color: rgba(238, 59, 36, 0.8);
    box-shadow: 0 0 10px rgba(238, 59, 36, 0.8), 0 0 30px rgba(238, 59, 36, 0.8);
}


/* Main page: options and upgrades */

.optionsContainer{
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: rgba(23, 196, 202, 0.15);
    width: 100rem;
    height: 12rem;
}

.tabsContainer{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 100%;
    width: 18rem;
}

.tabsBtn{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.9);
    color: white;
    height: 4rem;
    width: 6rem;
    border-radius: 10px;
    cursor: pointer;
    transition-duration: 50ms;
    transform: scale(1, 1);
    text-align: center;

}

.tabsBtn:hover{
    transition-duration: 50ms;
    transform: scale(1.3, 1.3);
}

.tabs{
    height: 100%;
    width: 82rem;
    background-color: rgba(20, 20, 70, 0.9);
    border-radius: 5px;

}

/* Upgrades */

.unitsTab{
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 100%;
    width: 100%;
    overflow-x: scroll;
}

.upgradeContainer{
    height: 10rem;
    width: 12rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgba(255, 255 , 255, 0.4);
    margin-left: 0.5rem;
    margin-right: 0.5rem;
    border: 2px solid rgba(255, 255, 255 0.8);
    border-radius: 8px;
}

.upgradeName{
    text-align: center;
    margin-top: 0;
    margin-bottom: 0.2rem;
}

.upgradeDescription{
    text-align: center;
    margin-top: 0;
    margin-bottom: 0.2rem;
}

.upgradeBtn{
    text-align: center;
    margin-top: auto;
    margin-bottom: 0.2rem;
}

/* Cookie */

.cookieTab{
    display: none;
    flex-direction: row;
    align-items: center;
    height: 100%;
    width: 100%;
    overflow-x: scroll;
    background-color: red;
}

html{
    background-color: gray;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

